--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,60 +1,13 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
 workflows:
-  version: 2
-  main:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - build:
-          filters:
-            branches:
-              only: master
-jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
-    steps:
-      - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}0
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: 
-          name: Installing Dependencies
-          command: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run: 
-          name: Generating .env
-          command: chmod +x build/create_env_vars.sh; ./build/create_env_vars.sh; cd build; ls -al
-
-      - run: 
-          name: Building
-          command: npm run build
-
-      - run:
-          name: Upload Build
-          command: scp -o "StrictHostKeyChecking no" /home/circleci/repo/dist/bundle.js root@seanpowell.dev:/var/www/api/save-our-faves.js
-
-      - run:
-          name: Starting Server
-          command: ssh -o "StrictHostKeyChecking no" root@seanpowell.dev "cd /var/www/api; pm2 delete save-our-faves; pm2 start save-our-faves.js"
+      - welcome/run
